--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.filip.weatherappmvpfinal">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -13,18 +13,22 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup">
-        <activity android:name=".view.main.MainActivity">
+        <activity android:name=".ui.main.view.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <action android:name="android.intent.action.VIEW"/>
+                <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.location.browse.BrowseLocationsActivity"
-            android:parentActivityName=".view.main.MainActivity" />
-        <activity android:name=".view.location.add.AddNewLocationActivity"
-            android:parentActivityName=".view.main.MainActivity" />
+        <activity
+            android:name=".ui.location.view.browse.BrowseLocationsActivity"
+            android:parentActivityName=".ui.main.view.MainActivity" />
+        <activity
+            android:name=".ui.location.view.add.AddNewLocationActivity"
+            android:parentActivityName=".ui.main.view.MainActivity" />
+        <activity android:name=".ui.forecast.ForecastDisplayActivity"
+            android:parentActivityName=".ui.location.view.browse.BrowseLocationsActivity"/>
     </application>
 
 </manifest>
