--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.google.android.gms:play-services-location:8.4.0'
     compile 'com.android.support:design:23.2.1'
+    testCompile 'org.mockito:mockito-all:1.10.19'
 }
