--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+        android:name=".App"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
@@ -27,7 +28,7 @@
         <activity
             android:name=".ui.location.view.add.AddNewLocationActivity"
             android:parentActivityName=".ui.main.view.MainActivity" />
-        <activity android:name=".ui.forecast.ForecastDisplayActivity"
+        <activity android:name=".ui.forecast.view.ForecastDisplayActivity"
             android:parentActivityName=".ui.location.view.browse.BrowseLocationsActivity"/>
     </application>
 
